examples/kubernetes/octant/antrea-octant.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: antrea
  name: antrea-octant
  namespace: kube-system
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: antrea
    component: antrea-octant
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: antrea
    component: antrea-octant
  name: antrea-octant
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: antrea
      component: antrea-octant
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: antrea
        component: antrea-octant
    spec:
      containers:
      - args:
        - -v
        command:
        - octant
        image: antrea/octant-antrea-ubuntu:v0.4.1
        name: antrea-octant
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /kube/
          name: kubeconfig
      priorityClassName: system-cluster-critical
      tolerations:
      - key: CriticalAddonsOnly
        operator: Exists
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
      volumes:
      - name: kubeconfig
        secret:
          defaultMode: 256
          secretName: octant-kubeconfig
